# minimal-agents

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agents/: __init__.py  agent.py  exceptions.py  items.py  model_settings.py  result.py  run.py  run_context.py  usage.py
src/agents/models/: interface.py  openai_provider.py
tests/: fake_model.py  test_agent_runner.py  test_responses.py
