[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minimal-agents"
version = "0.1.0"
description = "Minimal agents SDK."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Ezzeri Esa", email = "ezzeri.esa@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "openai",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.ruff]
target-version = "py312"